--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -16,6 +18,7 @@
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "gh-pages": "^6.3.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "react": "^18.3.1",
